[package]
name = "plotxy"
version = "0.1.1"
edition = "2021"
authors = ["Andreas Hauser <Andreas.Hauser@LMU.de>"]
description = "Commandline tool for plotting TSV/CSV data"
license = "EUPL-1.2"
keywords = ["plot", "command-line", "CLI", "visualization", "TSV"]
repository = "https://github.com/ahcm/plotxy"

[dependencies]
hex = "0.4.3"
palette = "0.7.3"
plotters = "0.3.5"
polars = { version = "0.32.0", features = ["performant", "lazy"]}
structopt = "0.3.26"
