[package]
name = "plotxy"
version = "0.2.2"
edition = "2021"
authors = ["Andreas Hauser <Andreas.Hauser@LMU.de>"]
description = "Commandline tool for plotting TSV/CSV data"
license = "EUPL-1.2"
keywords = ["plot", "command-line", "CLI", "visualization", "TSV"]
repository = "https://github.com/ahcm/plotxy"

[dependencies]
colorgrad = { version = "0.7.0", features = ["lab", "preset", "ggr", "named-colors"]}
hex = "0.4.3"
palette = "0.7.3"
plotters = "0.3.7"
polars = { version = "0.49", features = ["performant", "lazy", "dtype-categorical"] }
clap = { version = "4.5", features = ["derive"] }
